--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "~1.13.4",
     "framer-motion": "~12.31.1",
+    "lucide-react": "~0.563.0",
     "react": "^19.2.0",
     "react-day-picker": "~9.13.1",
     "react-dom": "^19.2.0",
